--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "bip39": "^2.2.0",
     "bluebird": "^3.5.0",
     "bn.js": "^4.11.7",
-    "boron": "^0.2.3",
     "browser-passworder": "^2.0.3",
     "browserify-derequire": "^0.9.4",
     "browserify-unibabel": "^3.0.0",
@@ -89,6 +88,7 @@
     "detect-node": "^2.0.3",
     "detectrtc": "^1.3.6",
     "dnode": "^1.2.2",
+    "domkit": "^0.0.1",
     "end-of-stream": "^1.1.0",
     "eth-block-tracker": "^4.4.2",
     "eth-contract-metadata": "^1.11.0",
@@ -167,7 +167,6 @@
     "react-tooltip-component": "^0.3.0",
     "react-transition-group": "^1.2.1",
     "react-trigger-change": "^1.0.2",
-    "reactify": "^1.1.1",
     "readable-stream": "^2.3.3",
     "recompose": "^0.25.0",
     "redux": "^3.0.5",
