--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
     "arrow-spacing": [2, { "before": true, "after": true }],
     "block-spacing": [2, "always"],
     "brace-style": 2,
-    "camelcase": [2, { "properties": "never" }],
+    "camelcase": [2, { "properties": "never", "allow": ["^UNSAFE_"] }],
     "comma-dangle": [2, "always-multiline"],
     "comma-spacing": [2, { "before": false, "after": true }],
     "comma-style": [2, "last"],
